src/core-impl/collections/db/sql/DatabaseUpdater.h
@@ -67,6 +67,7 @@ public:
     void upgradeVersion10to11();
     void upgradeVersion11to12();
     void upgradeVersion12to13();
+    void upgradeVersion13to14();
 
     /** Checks the given table for redundant entries.
      *  Table can be artist,album,genre,composer,urls or year
